# PyConfigurer

./: README.md  config.json  example.py  main.py  pyproject.toml  setup.py  test.py
.github/workflows/: publish-to-pypi.yml
PyConfigurer/: __init__.py  main.py
